--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Official Website</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <header class="header">
+        <!-- .header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff; -->
+        <h1>Hori<span class="seo">seo</span>n</h1> 
+        <!-- h1 .seo {
+    color: #d9dcd6; -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,26 +29,71 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
+    </header>
+<main>
+    <div class="hero">
+        <img src="/images/digital-marketing-meeting.jpg"/>
     </div>
-    <div class="hero"></div>
+    <!-- hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center; -->
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- .content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px; -->
+
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <!-- .search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff; -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <!-- .float-left {
+    float: left;
+    margin-right: 25px; -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
+            <!-- .online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff; -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <!-- .float-right {
+    float: right;
+    margin-left: 25px; -->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
+            <!-- .social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff; -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <!-- .float-left {
+    float: left;
+    margin-right: 25px; -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -49,7 +101,19 @@
         </div>
     </div>
     <div class="benefits">
+        <!-- .benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd; -->
         <div class="benefit-lead">
+            <!-- .benefit-lead {
+    margin-bottom: 32px;
+    color: #ffffff; -->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -57,6 +121,9 @@
             </p>
         </div>
         <div class="benefit-brand">
+            <!-- .benefit-brand {
+    margin-bottom: 32px;
+    color: #ffffff; -->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -64,6 +131,9 @@
             </p>
         </div>
         <div class="benefit-cost">
+            <!-- .benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff; -->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
@@ -71,7 +141,14 @@
             </p>
         </div>
     </div>
+</main>
     <div class="footer">
+        <!-- .footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+} -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
