--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 
 <body>
     <header class="header">
-        <!-- .header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff; -->
         <h1>Hori<span class="seo">seo</span>n</h1> 
-        <!-- h1 .seo {
-    color: #d9dcd6; -->
         <nav>
             <ul>
                 <li>
@@ -31,129 +24,66 @@
             </ul>
         </nav>
     </header>
-<main>
-    <div class="hero">
-        <img src="/images/digital-marketing-meeting.jpg"/>
-    </div>
-    <!-- hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center; -->
-    <div class="content">
-        <!-- .content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px; -->
+<figure class="hero" src="./images/digital-marketing-meeting.jpg" alt="Four workmates looking at some paperworks"></figure>
 
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <!-- .search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff; -->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <!-- .float-left {
-    float: left;
-    margin-right: 25px; -->
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <!-- .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff; -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <!-- .float-right {
-    float: right;
-    margin-left: 25px; -->
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <!-- .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff; -->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <!-- .float-left {
-    float: left;
-    margin-right: 25px; -->
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <!-- .benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd; -->
-        <div class="benefit-lead">
-            <!-- .benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff; -->
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <!-- .benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff; -->
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <!-- .benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff; -->
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-</main>
-    <div class="footer">
-        <!-- .footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-} -->
-        <h2>Made with ❤️️ by Horiseon</h2>
+<main class="content">
+    <section id="search-engine-optimization">
+        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="laptop, cup of coffee and school supplies on a table" />
+        <h2>Search Engine Optimization</h2>
         <p>
-            &copy; 2024 Horiseon Social Solution Services, Inc.
+                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+        </p>
+    </section>
+
+    <section id="online-reputation-management">
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="opened up laptop showing the word reputation with images of graph on screen" />
+        <h2>Online Reputation Management</h2>
+        <p>
+            The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+        </p>
+    </section>
+
+    <section id="social-media-marketing">
+        <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="hands and gadgets on tables with callouts of different social media platforms" />
+        <h2>Social Media Marketing</h2>
+        <p>
+            Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+        </p>
+    </section>
+</main>
+    
+<section class="benefits">
+    <div>
+        <h3>Lead Generation</h3>
+        <img src="./assets/images/lead-generation.png" alt="logo of funnel" />
+        <p>
+            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
         </p>
     </div>
+    
+    <div>
+        <h3>Brand Awareness</h3>
+        <img src="./assets/images/brand-awareness.png" alt="logo of lightbulb" />
+        <p>
+            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+        </p>
+    </div>
+
+    <div>
+        <h3>Cost Management</h3>
+        <img src="./assets/images/cost-management.png" alt="logo of coins" />
+        <p>
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+        </p>
+    </div>
+</section>   
+
+<footer class="footer">
+    <h4>Made with ❤️️ by Horiseon</h4>
+    <p>
+        &copy; 2024 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>
 </body>
 
 </html>
