--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             </ul>
         </nav>
     </header>
+
 <figure class="hero" src="./images/digital-marketing-meeting.jpg" alt="Four workmates looking at some paperworks"></figure>
 
-<main class="content">
+<main>
     <section id="search-engine-optimization">
         <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="laptop, cup of coffee and school supplies on a table" />
         <h2>Search Engine Optimization</h2>
@@ -55,7 +56,7 @@
 <section class="benefits">
     <div>
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" alt="logo of funnel" />
+        <img src="./assets/images/lead-generation.png" alt="icon of funnel" />
         <p>
             Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
         </p>
@@ -63,7 +64,7 @@
     
     <div>
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" alt="logo of lightbulb" />
+        <img src="./assets/images/brand-awareness.png" alt="icon of lightbulb" />
         <p>
             Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
         </p>
@@ -71,14 +72,14 @@
 
     <div>
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" alt="logo of coins" />
+        <img src="./assets/images/cost-management.png" alt="icon of coins" />
         <p>
             As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
         </p>
     </div>
 </section>   
 
-<footer class="footer">
+<footer>
     <h4>Made with ❤️️ by Horiseon</h4>
     <p>
         &copy; 2024 Horiseon Social Solution Services, Inc.
